# python

./: .gitignore  AGENTS.md  README.md  pyproject.toml
examples/: create_post.py  get_user.py  search_tweets.py
tests/: test_client.py  test_pagination.py  test_retry.py  test_timeout.py
tweetapi/: __init__.py  client.py  errors.py  pagination.py  types.py
tweetapi/resources/: auth.py  community.py  explore.py  interaction.py  list_.py  post.py  profile.py  space.py  tweet.py  unencrypted_dm.py  user.py  xchat.py
