[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tweetapi"
version = "1.2.0"
description = "Official Python SDK for TweetAPI — Twitter/X Data API for developers and researchers"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "TweetAPI", email = "support@tweetapi.com" },
]
keywords = [
    "twitter",
    "twitter api",
    "x api",
    "tweet api",
    "tweetapi",
    "twitter data",
    "social media api",
    "twitter sdk",
    "twitter client",
    "twitter wrapper",
    "twitter library",
    "tweets",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
    "Typing :: Typed",
]
dependencies = [
    "requests>=2.28.0",
]

[project.urls]
Homepage = "https://tweetapi.com?utm_source=pypi&utm_medium=readme&utm_campaign=python-sdk"
Documentation = "https://tweetapi.com/docs?utm_source=pypi&utm_medium=readme&utm_campaign=python-sdk"
Repository = "https://github.com/tweetapi/python"
Issues = "https://github.com/tweetapi/python/issues"

[tool.hatch.build.targets.wheel]
packages = ["tweetapi"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "responses>=0.23.0",
]
